# njbaza.github.io

./: .gitignore  README.md  index.html  script.js  style.css
.github/workflows/: deploy.yml
assets/css/: paper-dark.css  style.css
assets/images/: .xdp-fast_api.jpeg_Image.png-EU2QOT  .xdp-mlflow3_Image.png-LWMkOG  oil_gaspng
assets/images/_unused/: README.md
assets/images/mlops_llmops/: Diagrama sin título.drawio
assets/js/: dark-mode.js  script.js
assets/papers/architecting-business-mlops/: README.md  index.html
contributions/: README.md  _quarto.yml  index.html  paper.aux  paper.md  paper.qmd  paper.tex  pyproject.toml  references.bib
contributions/_site/: paper.html
contributions/_site/paper_files/libs/bootstrap/: bootstrap-396601e3c213cf3354c4ecdeb513c086.min.css
